Make sure <pre> never gets cut off but scrolls.

--- a/themes/dino/static/style.css
+++ b/themes/dino/static/style.css
@@ -88,6 +88,7 @@ pre {
     font-size: 14px;
     margin: 0;
     white-space: pre-wrap;
+    overflow: scroll;
 }
 
 .highlight {
